# src/main/kotlin/de/volpers/recipemaster/recipes/model/RecipeRepository.kt
@@ -5,5 +5,8 @@ import org.springframework.stereotype.Repository
 
 @Repository
 interface RecipeRepository : CrudRepository<RecipeEntity, Long> {
-
+    fun existsByIdentifier(identifier:String) : Boolean
+    fun findByIdentifier(identifier: String) : RecipeEntity
+    fun deleteByIdentifier(identifier: String)
+    fun updateByIdentifier(identifier: String, recipeEntity: RecipeEntity)
 }
